changing the build to have embedded tomcat as default server.
git-svn-id: https://svn.apache.org/repos/asf/airavata/trunk@1416631 13f79535-47bb-0310-9956-ffa450edef68